# lucos_configy

./: .gitignore  README.md  docker-compose.yml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
api/: CLAUDE.md  Cargo.toml  Dockerfile  config.yaml
api/src/: all.rs  components.rs  conneg.rs  data.rs  hosts.rs  info.rs  lib.rs  main.rs  repositories.rs  routing.rs  scripts.rs  systems.rs  volumes.rs
api/tests/: api_logic.rs  validation.rs
config/: components.yaml  config.yaml  hosts.yaml  scripts.yaml  systems.yaml  volumes.yaml
