[package]
name = "lucos_configy_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum web framework
axum = "0.8"

# Tokio async runtime (required by Axum)
tokio = { version = "1", features = ["full"] }

# For serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
axum-yaml = "0.5.0"
csv = "1.4.0"

mime = "0.3"

# (Optional) for HTTP constants like StatusCode, HeaderValue
http = "1"

# (Optional) structured logging/tracing support (handy in async servers)
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
